# tickr

./: Cargo.toml
src/: lib.rs  tests.rs
