[package]
name = "tickr"
description = "A iterator that gives you a infinite stream of bools, turing true once every time a certain duration has passed"
version = "0.1.2"
authors = ["post-rex <post-rex@pm.me>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/post-rex/tickr"
documentation="https://docs.rs/tickr/0.1.0/tickr/"
keywords = ["iterator", "time"]
categories = ["date-and-time"]
include = [
    "**/*.rs",
    "Cargo.toml"
]

[dependencies]
